--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "tailwindcss": "^3.4.1",
